--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>React Redux Demo</title>
+  <link rel="stylesheet" href="/__dist__/app.css" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
